--- a/.github/workflows/infrastructure-deployment.yaml
+++ b/.github/workflows/infrastructure-deployment.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 jobs:
-  deploy:
+  deploy-infrastructure:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
