--- a/.github/workflows/infrastructure-destroy.yaml
+++ b/.github/workflows/infrastructure-destroy.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main-destroy
 jobs:
-  deploy:
+  destroy-infrastructure:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
